Fixed footer on mobile

--- a/index.css
+++ b/index.css
@@ -673,7 +673,7 @@ footer {
         display: flex;
         justify-content: center;
         align-content: center;
-        margin-right: -80px;
+        margin-right: -155px;
         margin-bottom: 100px;
     }
 
